# advent_of_code_2025

./: .gitignore  Cargo.toml  justfile
aoc_common/: Cargo.toml
aoc_common/src/: grid_1d.rs  lib.rs
src/: day01.rs  day02.rs  main.rs
src/01/: main.rs
src/02/: main.rs
src/03/: README.md  main.rs
src/04/: main.rs
src/05/: main.rs
src/06/: main.rs
src/07/: main.rs
src/08/: README.md  main.rs
src/09/: README.md  main.rs
src/10/: README.md  main.rs
src/11/: main.rs
src/12/: main.rs
src/meta/: answer.rs  mod.rs  solution.rs  solutions_map.rs
src/y2025/: day01.rs  day02.rs
