[package]
name = "aoc2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc_common = { path = "./aoc_common" }

[[bin]]
name = "01"
path = "src/01/bin/main.rs"

[[bin]]
name = "02"
path = "src/02/bin/main.rs"

[[bin]]
name = "03"
path = "src/03/bin/main.rs"

[[bin]]
name = "04"
path = "src/04/bin/main.rs"
